--- a/src/app/modules/session/components/session/session.component.html
+++ b/src/app/modules/session/components/session/session.component.html
@@ -1,6 +1,6 @@
 <app-image-session
 	*ngIf="image"
-	[url]="image.url"
+	[url]="image.baseUrl"
 	[image]="image"
 ></app-image-session>
 <app-session-controls></app-session-controls>
