--- a/src/app/modules/session/components/image-session/image-session.component.html
+++ b/src/app/modules/session/components/image-session/image-session.component.html
@@ -1,8 +1,8 @@
 <div class="image-zoom">
-	<button mat-mini-fab color="secondary" (click)="zoomIn()">
+	<button class="sizeButton" mat-mini-fab color="secondary" (click)="zoomIn()">
 		<mat-icon>add</mat-icon>
 	</button>
-	<button mat-mini-fab color="secondary" (click)="zoomOut()">
+	<button class="sizeButton" mat-mini-fab color="secondary" (click)="zoomOut()">
 		<mat-icon>remove</mat-icon>
 	</button>
 </div>
