--- a/src/app/modules/session/components/image-session/image-session.component.scss
+++ b/src/app/modules/session/components/image-session/image-session.component.scss
@@ -24,7 +24,9 @@
 		transform: scale(0.7);
 	}
 }
-
+.sizeButton {
+	background-color: white;
+}
 .image-container {
 	height: 95vh;
 	margin-top: 3vh;
