--- a/src/styles.scss
+++ b/src/styles.scss
@@ -21,20 +21,20 @@ body {
 	color: white;
 }
 
-.mat-snack-bar-container {
+.mat-mdc-snack-bar-container {
 	width: fit-content !important;
 	min-width: fit-content !important;
 }
-.mat-snack-bar-container span {
+.mat-mdc-snack-bar-container span {
 	font-size: 1.2rem !important;
 	margin: 0px 20px;
 }
-.mat-snack-bar-container.error {
+.mat-mdc-snack-bar-container.error {
 	background-color: var(--red);
 	color: white;
 }
 
-.mat-snack-bar-container.success {
+.mat-mdc-snack-bar-container.success {
 	background-color: var(--green);
 	color: white;
 }
