--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -1,3 +1,14 @@
-mat-card {
-	margin-top: 30vh;
+/* TODO(mdc-migration): The following rule targets internal classes of card that may no longer apply for the MDC version. */
+
+.login-page {
+	padding: 10px;
+	mat-card {
+		width: 280px;
+		margin: auto;
+		margin-top: 30vh;
+
+		button {
+			width: 100%;
+		}
+	}
 }
