--- a/src/app/modules/auth/components/login/login.component.html
+++ b/src/app/modules/auth/components/login/login.component.html
@@ -1,39 +1,42 @@
-<div fxLayout="row" fxLayoutAlign="center center">
-	<mat-card >
+<div>
+	<mat-card appearance="outlined">
 		<mat-card-content fxLayout="column" fxLayoutGap="20px">
-			<div >
+			<div>
 				<button mat-button>
-					<div fxLayout="row" fxLayoutAlign="start center" fxLayoutGap="5px" [routerLink]="['/']" >
+					<div [routerLink]="['/']">
 						<mat-icon>arrow_back</mat-icon>
 						<span>Go to Home</span>
 					</div>
 				</button>
 			</div>
-			<form fxLayout="column" [formGroup]="form"  (ngSubmit)="onSubmit()">
+			<form [formGroup]="form" (ngSubmit)="onSubmit()">
 				<mat-form-field class="" appearance="fill">
 					<mat-label>Email</mat-label>
-					<input matInput placeholder="user@example.com" required type="email" formControlName="email">
+					<input
+						matInput
+						placeholder="user@example.com"
+						required
+						type="email"
+						formControlName="email"
+					/>
 				</mat-form-field>
 				<mat-form-field class="" appearance="fill">
 					<mat-label>Password</mat-label>
-					<input type="password" matInput required formControlName="password">
+					<input type="password" matInput required formControlName="password" />
 				</mat-form-field>
-				<div fxLayout="row" fxLayoutAlign="center">
+				<div fxLayoutAlign="center">
 					<button
-					id="btnSubmit"
-						fxFlex="100%"
+						id="btnSubmit"
 						mat-raised-button
 						color="primary"
-						[disabled]="form.invalid || loading" 
-						fxLayout="row"
-						fxLayoutAlign="center center"
+						[disabled]="form.invalid || loading"
 					>
 						<mat-spinner diameter="20" *ngIf="loading"></mat-spinner>
 						<span *ngIf="!loading">Login</span>
 					</button>
 				</div>
-				<br>
-				<div fxLayout="row" fxLayoutAlign="center center" >
+				<br />
+				<div fxLayout="row" fxLayoutAlign="center center">
 					<u>
 						<a [routerLink]="['/auth/register']">Register</a>
 					</u>
