--- a/src/app/modules/auth/components/register/register.component.html
+++ b/src/app/modules/auth/components/register/register.component.html
@@ -1,5 +1,5 @@
 <div fxLayout="row" fxLayoutAlign="center center">
-	<mat-card >
+	<mat-card appearance="outlined" >
 		<mat-card-content fxLayout="column" fxLayoutGap="20px">
 			<div >
 				<button mat-button>
